# magic-converter

./: Cargo.toml  LICENSE  README.md  note.md
.github/workflows/: release.yml
scripts/: setup_ffmpeg.bat  setup_ffmpeg.sh  setup_ffmpeg_linux.sh  setup_ffmpeg_local.bat
src/: command.rs  gui.rs  gui_widget.rs  lib.rs  main.rs  service.rs  video.rs
tests/: video_test.rs
