[package]
name = "magic-converter"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "magic-converter-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "magic-converter-gui"
path = "src/bin/gui.rs"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
iced = "0.10"
tokio = { version = "1.36", features = ["full"] }
